--- a/P005378.opf/meta.yml
+++ b/P005378.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P005378
+id: P005378
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W30480
   title: ཆུ་མོ་ལི་ཁྲིའི་ནོར་རྫོང་།
-  volume: ''
   author: ''
+  volumes: {}
