--- a/P005378.opf/meta.yml
+++ b/P005378.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W30480
   title: ཆུ་མོ་ལི་ཁྲིའི་ནོར་རྫོང་།
   author: ''
-  volumes: {}
+  volumes:
+    b49980b29a7f40e8b81c986241e2c5eb:
+      image_group_id: I1KG16927
+      title: ''
+      volume_number: 1
+      total_pages: 588
