--- a/P005378.opf/layers/v001/Pagination.yml
+++ b/P005378.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5552059cf06c49bbaae55c21d6f83c01
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   0a994526baa14b69af7152e827f5fea5:
