--- a/P005378.opf/meta.yml
+++ b/P005378.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P005378
 initial_creation_type: ocr
 created_at: 21/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 11:47:12.602090
 source_metadata:
   id: bdr:W30480
   title: ཆུ་མོ་ལི་ཁྲིའི་ནོར་རྫོང་།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 588
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
